# RayTracingInOneWeekend

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.adoc
src/: camera.cpp  camera.cxx  color.cpp  color.cxx  dielectric.cpp  dielectric.cxx  hit_record.cxx  hittable_object.cxx  hittable_object_list.cpp  hittable_object_list.cxx  interval.cxx  lambertian.cpp  lambertian.cxx  material.cxx  material_base.cxx  metal.cpp  metal.cxx  ray.cxx  rtiow.cxx  rtiow_utility.cpp  rtiow_utility.cxx  scatter_record.cxx  sphere.cpp  sphere.cxx  vec3.cpp  vec3.cxx
